fix(responsive): better display on small mobile heights

--- a/src/modules/landing/components/countdown/countdown.component.scss
+++ b/src/modules/landing/components/countdown/countdown.component.scss
@@ -60,7 +60,7 @@
       font-weight: 900;
 
       @include for-phone-only {
-        margin-top: 5px;
+        margin-top: 0;
         font-size: 12px;
       }
     }
